--- a/app/src/main/res/layout/activity_sp.xml
+++ b/app/src/main/res/layout/activity_sp.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical">
+              android:layout_height="match_parent">
 
     <include layout="@layout/activity_title"/>
 
     <ListView
-        android:id="@+id/lv_main"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></ListView>
+        android:layout_height="match_parent"
+        android:id="@+id/lv_sp"></ListView>
 
 </LinearLayout>
