--- a/app/src/main/res/layout/item_textview.xml
+++ b/app/src/main/res/layout/item_textview.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
           android:id="@+id/tv_item_main"
-          android:layout_width="match_parent"
-          android:layout_height="match_parent"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
           android:gravity="center"
           android:padding="10dp"
+          android:text=""
           android:textColor="@color/black"
           android:textSize="16sp">
 
