--- a/basislibrary/src/main/res/layout/foot_recycleview_loadmore.xml
+++ b/basislibrary/src/main/res/layout/foot_recycleview_loadmore.xml
@@ -6,7 +6,7 @@
               android:gravity="center"
               android:orientation="horizontal">
 
-    <com.gingold.basislibrary.view.CircleProgress.CircleLoadingView
+    <com.gingold.basislibrary.view.CircleProgress.CircleProgressView
         android:id="@+id/pb_y_recycleview_foot_loadmore_progressbar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
