--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:src="@drawable/arrow_down"/>
+        android:src="@drawable/lvgvrv_arrow_down"/>
 
     <TextView
         android:id="@+id/tv_test_down"
