--- a/app/src/main/res/layout/activity_uploadpic.xml
+++ b/app/src/main/res/layout/activity_uploadpic.xml
@@ -90,7 +90,7 @@
             android:layout_marginBottom="5dp"
             android:layout_marginTop="5dp"
             android:padding="20dp"
-            android:src="@drawable/arrow_down"
+            android:src="@drawable/lvgvrv_arrow_down"
             />
     </RelativeLayout>
 
