--- a/basislibrary/src/main/res/layout/dialog_simple.xml
+++ b/basislibrary/src/main/res/layout/dialog_simple.xml
@@ -2,86 +2,76 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
-              android:layout_marginLeft="20dp"
-              android:layout_marginRight="20dp"
-              android:background="@null"
+              android:background="@drawable/dialog_simple_bg"
               android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/bg_dialog"
         android:orientation="vertical">
 
-
-        <LinearLayout
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/tv_dialog_simple_title"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_gravity="center_horizontal"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginTop="20dip"
+            android:text="标题"
+            android:textColor="@color/black"
+            android:textSize="17sp"
+            android:textStyle="bold"/>
 
-            <TextView
-                android:id="@+id/tv_dialog_simple_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginLeft="15dp"
-                android:layout_marginRight="15dp"
-                android:layout_marginTop="20dip"
-                android:text="标题"
-                android:textColor="@color/black"
-                android:textSize="17sp"
-                android:textStyle="bold"/>
+        <TextView
+            android:id="@+id/tv_dialog_simple_message"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="10dip"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginTop="10dip"
+            android:gravity="center"
+            android:lineSpacingExtra="2dp"
+            android:text="信息"
+            android:textColor="@color/black"/>
+    </LinearLayout>
 
-            <TextView
-                android:id="@+id/tv_dialog_simple_message"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginBottom="10dip"
-                android:layout_marginLeft="15dp"
-                android:layout_marginRight="15dp"
-                android:layout_marginTop="10dip"
-                android:gravity="center"
-                android:lineSpacingExtra="2dp"
-                android:text="信息"
-                android:textColor="@color/black"/>
-        </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/darker_gray"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tv_dialog_simple_cancel"
+            android:layout_width="0dip"
+            android:layout_height="52dip"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="取消"
+            android:textColor="@color/blue_confirm"
+            android:textSize="17sp"/>
 
         <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
+            android:layout_width="1dip"
+            android:layout_height="52dip"
             android:background="@color/darker_gray"/>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/tv_dialog_simple_cancel"
-                android:layout_width="0dip"
-                android:layout_height="52dip"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="取消"
-                android:textColor="@color/blue_confirm"
-                android:textSize="17sp"/>
-
-            <View
-                android:layout_width="1dip"
-                android:layout_height="52dip"
-                android:background="@color/darker_gray"/>
-
-            <TextView
-                android:id="@+id/tv_dialog_simple_confirm"
-                android:layout_width="0dip"
-                android:layout_height="52dip"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="确定"
-                android:textColor="@color/blue_confirm"
-                android:textSize="17sp"/>
-        </LinearLayout>
+        <TextView
+            android:id="@+id/tv_dialog_simple_confirm"
+            android:layout_width="0dip"
+            android:layout_height="52dip"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="确定"
+            android:textColor="@color/blue_confirm"
+            android:textSize="17sp"/>
     </LinearLayout>
 
 </LinearLayout>
