--- a/basislibrary/src/main/res/drawable/dialog_simple_bg.xml
+++ b/basislibrary/src/main/res/drawable/dialog_simple_bg.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- 颜色 -->
-    <solid android:color="@color/white"/>
+    <solid android:color="@color/background_light"/>
     <!-- 描边 -->
     <stroke
         android:width="1dip"
-        android:color="#afafaf"/>
+        android:color="#66afafaf"/>
     <!-- 角度 -->
     <corners android:radius="10dip"/>
 </shape>
