--- a/basislibrary/src/main/res/values/style.xml
+++ b/basislibrary/src/main/res/values/style.xml
@@ -9,6 +9,6 @@
         <item name="android:windowNoTitle">true</item>
         <item name="android:background">@null</item>
         <item name="android:windowBackground">@null</item>
-        <item name="android:backgroundDimEnabled">false</item>
+        <item name="android:backgroundDimEnabled">true</item>
     </style>
 </resources>
