1.okhttp 添加get请求; 2.手机设备信息获取工具类; 3.getTvText等方法去掉点击事件; 4.网络请求添加显示dialog方法;

--- a/basislibrary/src/main/res/layout/pb_loading.xml
+++ b/basislibrary/src/main/res/layout/pb_loading.xml
@@ -18,6 +18,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:layout_marginTop="8.0dip"
+        android:gravity="center"
         android:text="加载中..."
         android:textColor="#fff"
         android:textSize="16.0dip"/>
