1.FragmentPagerAdapter 和 FragmentPagerStateAdapter 对比; 2.沉浸式工具类 BasisImmerseUtils; 3.本地应用安装 BasisCommonUtils.installApk; 4.工具类BasisDeviceUtils添加判断手机系统方法; 5.工具类BasisFileUtils添加拷贝assets资源方法

--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -49,4 +49,11 @@
         android:singleLine="true"
         android:text=""/>
 
+    <TextView
+        android:id="@+id/tv_test_installapk"
+        android:layout_width="match_parent"
+        android:layout_height="52dp"
+        android:gravity="center"
+        android:text="安装软件"/>
+
 </LinearLayout>
