1.BasisTimesUtils 工具类添加 DatePickerDialog 和 TimePickerDialog 的使用; 2.常规动画测试

--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -56,4 +56,11 @@
         android:gravity="center"
         android:text="安装软件"/>
 
+    <TextView
+        android:id="@+id/tv_test_gson"
+        android:layout_width="match_parent"
+        android:layout_height="52dp"
+        android:gravity="center"
+        android:text="Gson"/>
+
 </LinearLayout>
