--- a/app/src/main/res/layout/activity_okhttp.xml
+++ b/app/src/main/res/layout/activity_okhttp.xml
@@ -19,7 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="52dp"
         android:gravity="center"
-        android:text="okhttp"
+        android:text="okhttpGet"
         android:layout_marginTop="10dp"
         android:textColor="@color/black"/>
 
